--- a/29_01_25_.ipynb
+++ b/29_01_25_.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJGjAyuuk8KdezAt3NATRB",
+      "authorship_tag": "ABX9TyPPZgG0RjQghEiBfZ1PCoRu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "wt-kOGmfyoFr"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -62,7 +62,7 @@
       "metadata": {
         "id": "BeYjsNCTywpB"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -73,7 +73,7 @@
       "metadata": {
         "id": "gHo1reSRy1NU"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -85,7 +85,7 @@
       "metadata": {
         "id": "u-Y4dnqszBoT"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -96,7 +96,7 @@
       "metadata": {
         "id": "6t7Snjn0znPr"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -110,7 +110,7 @@
       "metadata": {
         "id": "KLhxnByzzsWF"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -121,7 +121,7 @@
       "metadata": {
         "id": "IM-_BMoDz57H"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -135,9 +135,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xVPmY62P2xQ0",
-        "outputId": "7f4ddbbb-2307-4d38-f449-8b02a633584c"
+        "outputId": "6d61d8df-3ad9-48dd-b7d3-d8e2abe41d40"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,7 +174,7 @@
       "metadata": {
         "id": "P3dCIUrL68cL"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -188,9 +188,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nEgW04uI7Vai",
-        "outputId": "2b976815-5201-4a3d-fae1-323416bbd77c"
+        "outputId": "0c833966-b309-42c9-def5-ee1c8d8f95aa"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -210,8 +210,15 @@
       "metadata": {
         "id": "Xil6_eZq8jAX"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "DwBAoVf7YVqm"
+      }
     },
     {
       "cell_type": "code",
@@ -225,9 +232,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SeIwQmTK89On",
-        "outputId": "21bae668-bc93-4099-f0b8-2ecc03253996"
+        "outputId": "267dacd6-bf67-4857-dd1b-9fb88b218a3b"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -247,7 +254,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 17
         }
       ]
     },
@@ -257,6 +264,305 @@
       "metadata": {
         "id": "6SEJacUrzBHe"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f=open('input.txt','r',errors = 'ignore')\n",
+        "raw=f.read()\n",
+        "raw = raw.lower()"
+      ],
+      "metadata": {
+        "id": "VFVcUsHWWFqa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import nltk\n",
+        "nltk.download('punkt_tab')\n",
+        "sent_tokens = nltk.sent_tokenize(raw)\n",
+        "word_tokens = nltk.word_tokenize(raw)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RpgnXmZ4Y4IJ",
+        "outputId": "cd91ffb8-885d-4865-f42c-681d7078893c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt_tab is already up-to-date!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "****Preprocessing***"
+      ],
+      "metadata": {
+        "id": "3oukgnchZyg6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import string # Import the string module\n",
+        "\n",
+        "lemmer = nltk.stem.WordNetLemmatizer()\n",
+        "def LemTokens(tokens):\n",
+        "    return [lemmer.lemmatize(token) for token in tokens]\n",
+        "remove_punct_dict = dict((ord(punct), None) for punct in string.punctuation)\n",
+        "\n",
+        "def LemNormalize(text):\n",
+        "    return LemTokens(nltk.word_tokenize(text.lower().translate(remove_punct_dict)))"
+      ],
+      "metadata": {
+        "id": "g_FZBIpPaw7j"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Keyword matching**"
+      ],
+      "metadata": {
+        "id": "Ujye3alQa4um"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "GREETING_INPUTS = (\"hello\", \"hi\", \"greetings\", \"sup\", \"what's up\",\"hey\",)\n",
+        "GREETING_RESPONSES = [\"hi\", \"hey\", \"*nods*\", \"hi there\", \"hello\", \\\n",
+        "                      \"I am glad! You are talking to me\",\\\n",
+        "                      \"I am fine! How about you?\"]\n",
+        "def greeting(sentence):\n",
+        "    for word in sentence.split():\n",
+        "        if word.lower() in GREETING_INPUTS:\n",
+        "            return random.choice(GREETING_RESPONSES)"
+      ],
+      "metadata": {
+        "id": "KNX0IkfQa7c1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "****Generating Response**"
+      ],
+      "metadata": {
+        "id": "B80TsiELc6bp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "from sklearn.metrics.pairwise import cosine_similarity"
+      ],
+      "metadata": {
+        "id": "XcNynwJzhlxj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " import nltk\n",
+        " nltk.download('wordnet')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e6KfU9QxhxwH",
+        "outputId": "4451940a-4af6-48b5-e9ac-d6174e6b69e4"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
+            "[nltk_data]   Package wordnet is already up-to-date!\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def response(user_response):\n",
+        "    robo_response=''\n",
+        "    sent_tokens.append(user_response)\n",
+        "    TfidfVec = TfidfVectorizer(tokenizer=LemNormalize, stop_words='english')\n",
+        "    tfidf = TfidfVec.fit_transform(sent_tokens)\n",
+        "    vals = cosine_similarity(tfidf[-1], tfidf)\n",
+        "    idx=vals.argsort()[0][-2]\n",
+        "    flat = vals.flatten()\n",
+        "    flat.sort()\n",
+        "    req_tfidf = flat[-2]\n",
+        "    if(req_tfidf==0):\n",
+        "        robo_response=robo_response+\"I am sorry! I don't understand you\"\n",
+        "        return robo_response\n",
+        "    else:\n",
+        "        robo_response = robo_response+sent_tokens[idx]\n",
+        "        return robo_response"
+      ],
+      "metadata": {
+        "id": "AC3d6-eRc9iJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "flag=True\n",
+        "print(\"SABot: My name is SABot. How can I assist you?.\\\n",
+        "If you want to exit, type Bye!\")\n",
+        "while(flag==True):\n",
+        "    user_response = input()\n",
+        "    user_response=user_response.lower()\n",
+        "    if(user_response!='bye'):\n",
+        "        if(user_response=='thanks' or user_response=='thank you' ):\n",
+        "            flag=False\n",
+        "            print(\"SABot: You are welcome....\")\n",
+        "        else:\n",
+        "            if(greeting(user_response)!=None):\n",
+        "                print(\"SABot: \"+greeting(user_response))\n",
+        "            else:\n",
+        "                print(\"SABot: \",end=\"\")\n",
+        "                print(response(user_response))\n",
+        "                sent_tokens.remove(user_response)\n",
+        "    else:\n",
+        "        flag=False\n",
+        "        print(\"SABot: Bye! take care...\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 373
+        },
+        "id": "QHTAiTNre8fM",
+        "outputId": "a700258d-0b7b-475f-ebee-a35c23123f17"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "SABot: My name is SABot. How can I assist you?.If you want to exit, type Bye!\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "Interrupted by user",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-25-e2cb2293ffcc>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m If you want to exit, type Bye!\")\n\u001b[1;32m      4\u001b[0m \u001b[0;32mwhile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mflag\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0muser_response\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0muser_response\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0muser_response\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mif\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muser_response\u001b[0m\u001b[0;34m!=\u001b[0m\u001b[0;34m'bye'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m    849\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    850\u001b[0m             )\n\u001b[0;32m--> 851\u001b[0;31m         return self._input_request(str(prompt),\n\u001b[0m\u001b[1;32m    852\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    853\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    893\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    894\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 895\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    896\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    897\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "flag = True\n",
+        "print(\"SABot: My name is SABot. How can I assist you? If you want to exit, type Bye!\")\n",
+        "\n",
+        "while flag:\n",
+        "    user_response = input()  # Get user input\n",
+        "    user_response = user_response.lower()  # Convert to lowercase\n",
+        "\n",
+        "    if user_response != 'bye':\n",
+        "        if user_response in ['thanks', 'thank you']:\n",
+        "            flag = False\n",
+        "            print(\"SABot: You are welcome....\")\n",
+        "        else:\n",
+        "            # Assuming 'greeting' is a function that checks for greeting messages\n",
+        "            if greeting(user_response) is not None:\n",
+        "                print(\"SABot: \" + greeting(user_response))\n",
+        "            else:\n",
+        "                print(\"SABot: \", end=\"\")\n",
+        "                print(response(user_response))\n",
+        "    else:\n",
+        "        flag = False\n",
+        "        print(\"SABot: Bye! Take care...\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wW1Mu-JekA5O",
+        "outputId": "fcda7da7-5292-4644-8936-f3347c835198"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "SABot: My name is SABot. How can I assist you? If you want to exit, type Bye!\n",
+            "what is computer\n",
+            "SABot: what is a computer?\n",
+            "what is Data science\n",
+            "SABot: what is data science?\n",
+            "what is AI\n",
+            "SABot: artificial intelligence (ai) is the ablility of a computer or a robot controlled by a computer to do tasks that are usually done by humans because they require human intelligence and discrement.\n",
+            "what is text similarity\n",
+            "SABot: what is text similarity?\n",
+            "list any 3 algorithms in ML\n",
+            "SABot: list any 3 algorithms in ml?\n",
+            "BY\n",
+            "SABot: I am sorry! I don't understand you\n",
+            "bye\n",
+            "SABot: Bye! Take care...\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "rCQBy4Gvhptf"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
